# News-Channel-Cpp

./: .gitignore  ArticleData.cpp  ArticleData.h  CMakeLists.txt  CurlWrapper.cpp  CurlWrapper.h  FileGenerator.cpp  FileGenerator.h  Logger.cpp  Logger.h  Source.cpp  Source.h  Types.cpp  Types.h  main.cpp
